# web-search-MCP

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  searxng.service  start.sh
search_mcp/: __init__.py  server.py
searxng/: settings.yml
